--- a/views/index.jade
+++ b/views/index.jade
@@ -2,5 +2,5 @@ extends layout
 
 block content
   h1 Welcome To Mr. Twooper
-  p Michael Party Huey Brings The Fucking Party
+  p Michael Party Huey Brings The Fucking Party.
   div#tweets
