20 second timer and a start button wired for deployment

--- a/views/index.jade
+++ b/views/index.jade
@@ -3,4 +3,5 @@ extends layout
 block content
   h1 Welcome To Mr. Twooper
   p Michael Party Huey Brings The Fucking Party.
+  button#start START
   div#tweets
