initial structure dom

--- a/views/index.jade
+++ b/views/index.jade
@@ -6,4 +6,4 @@ block content
   p In honor of his partyness, if you hit the start button it will stream tweets about MN for 20 seconds
   button#start LAND OF A THOUSAND LAKES
   div#tweets
-    div#world
+    div#main
