--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,8 @@
 extends layout
 
 block content
-  div#header
-    h1 Welcome To Mr. Twooper
-  div#main
+  div.container
+    div.row
+      div#header.col-sm-12
+          h1 Welcome To Mr. Twooper
+        div#main
